# ringforge

./: .gitignore  ARGUS_SETUP.md  Makefile  PLAN.md  PRD.md  README.md  ROADMAP.md  TECHNICAL_PLAN.md  VISION.md
.github/workflows/: ci.yml
edge/: .gitignore  README.md  go.mod  go.sum
edge/cmd/keyring/: helpers.go  main.go
edge/internal/client/: auth.go  channel.go  client.go
edge/internal/crypto/: blake3.go  ed25519.go
edge/internal/store/: queue.go  store.go
edge/internal/sync/: download.go  upload.go
edge/internal/watcher/: debounce.go  watcher.go
hub/: .gitignore  Dockerfile  docker-compose.cluster.yml  mix.exs
hub/config/: config.exs  runtime.exs
hub/lib/: hub.ex
hub/lib/hub/: accounts.ex  alerts.ex  application.ex  artifacts.ex  audit.ex  auth.ex  billing.ex  challenge_store.ex  cluster.ex  cluster_controller.ex  consistent_hash.ex  context_injection.ex  crypto.ex  devices.ex  direct_message.ex  endpoint.ex  error_html.ex  event_replay.ex  events.ex  files.ex  fleet_channel.ex  fleet_presence.ex  fleets.ex  groups.ex  health_controller.ex  input.ex  invites.ex  kanban.ex  keyring_channel.ex  layouts.ex  memory.ex  metrics.ex  metrics_controller.ex  node_info.ex  presence.ex  provisioning.ex  provisioning_worker.ex  quota.ex  redirect_controller.ex  region.ex  (+19 more)
hub/priv/repo/: seeds.exs
hub/scripts/: connect_agent.js
hub/test/: phase5_test.exs
proto/: README.md  buf.yaml
proto/keyring/v1/: events.proto  identity.proto  store.proto  sync.proto
store/: Cargo.toml  README.md
store/src/: main.rs  merkle.rs  protocol.rs  store.rs
(+108 files in other folders)
